[gd_scene load_steps=4 format=3 uid="uid://djw1srwh1osf6"]

[ext_resource type="Script" path="res://server_setup/server_setup.gd" id="1_iuyet"]

[sub_resource type="Animation" id="1"]
resource_name = "animate_feedback"
length = 0.5
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Margin/VBoxContainer/ServerFeedback:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hemk2"]
_data = {
"animate_feedback": SubResource("1")
}

[node name="ServerSetup" type="Control"]
layout_mode = 3
anchor_right = 0.25
anchor_bottom = 0.2
script = ExtResource("1_iuyet")

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0

[node name="VBoxContainer" type="VBoxContainer" parent="Margin"]
layout_mode = 2

[node name="Host" type="Button" parent="Margin/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Host"

[node name="HBoxContainer" type="HBoxContainer" parent="Margin/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="IPAddress" type="LineEdit" parent="Margin/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "localhost"

[node name="Join" type="Button" parent="Margin/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Join"

[node name="ServerFeedback" type="Label" parent="Margin/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
text = "Sample text"

[node name="FeedbackAnimation" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_hemk2")
}

[connection signal="pressed" from="Margin/VBoxContainer/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="Margin/VBoxContainer/HBoxContainer/Join" to="." method="_on_join_pressed"]
